--- a/views/zombieEq.ejs
+++ b/views/zombieEq.ejs
@@ -1,8 +1,5 @@
 <% include _header %>
-
-<a href="/equip" class="btn btn-primary">Registrar equipo </a>
-<br>
-
+<a href="/equip" class="btn btn-primary btn-block">Registrar equipo </a>
 <% equipo.forEach((e) => {%>
     <div class="panel panel-default">
         <div class="panel-heading">
@@ -22,11 +19,6 @@
      
         </div>
     </div>
-    
 
 <% }) %>
-
-<br>
-<br>
-
 <% include _footer %>
