--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
 <div class=" navbar navbar-default navbar-static-top" role="navigation">
@@ -14,6 +17,9 @@
         </div>
         <ul class="nav navbar-nav navbar-right">
             <%if (currentZombie){%>
+            <li>
+                <a href="#"><%= currentZombie.Role() %></a>
+            </li>
             <li>
                 <a href="/edit">Hola, <%= currentZombie.name() %></a>
 
