--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,19 +1,20 @@
 <%include _header%>
-    <h1>Bienvenido a la guardia Zombie!!!</h1>
+<h1>Bienvenid@ a la guarida zombie!</h1>
 
-    <%zombies.forEach((zombie) =>{%>
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <a href="/zombies/<%=zombie.username%>">
-                    <%=zombie.name()%>
-                </a>
-            </div>
-            <%if (zombie.bio){%>
-                <div class="panel-body">
-                    <%=zombie.bio%>
-                </div>
-                <%}%>
-        </div>
-        <%})%>
+<% zombies.forEach((zombie) => {%>
+    <div class="panel panel-default">
+    <div class="panel-heading">
+        <a href="/zombies/<%= zombie.username %>">
+        <%= zombie.name() %>
+        </a>
 
-            <%include _footer%>
+    </div>
+    <%if (zombie.bio){%>
+    <div class="panel-body"><%= zombie.bio %></div>
+<%}%>
+
+    </div>
+
+<% }) %>
+
+<%include _footer%>
