--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,20 +1,14 @@
-<%include _header%>
+<% include _header %>
 
-    <% if ((currentZombie)&&(currentZombie.id === zombie.id)){%>
-        <a href="/edit" class="pull-right">Edita tu perfil</a>
-        <%}%>
+<% if ((currentZombie) && (currentZombie.id  === zombie.id)) { %>
+<a href="/edit" class="pull-right">Edita tu perfil</a>
+<% } %>
 
-            <h1>
-                <%= zombie.name() %>
-            </h1>
-            <h2>Se registro el
-                <%= zombie.createdAt%>
-            </h2>
+<h1><%= zombie.name() %></h1>
+<h2>Se registro el <%= zombie.createdAt %></h2>
 
-            <%if(zombie.bio){%>
-                <p>
-                    <%= zombie.bio%>
-                </p>
-                <%}%>
+<% if(zombie.bio) { %>
+    <p><%= zombie.bio %></p>
+<% } %>
 
-                    <%include _footer%>
+<% include _footer %>
